feat: Started adding backend code to get access token